# FileTransferService

./: README.md  run.sh
src/: CMakeLists.txt  run.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.h
src/network/: Packet.h  UdpSocket.cpp  UdpSocket.h
src/process/: Process.cpp  Process.h
src/server/: CMakeLists.txt  Server.cpp  Server.h
